--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -20,8 +20,8 @@ jobs:
 
       # Build Docker Image
         - name: Build the Docker image
-          run: docker build https://github.com/Apro2011/Collaboration-Project/tree/develop/backend --file Dockerfile --tag ${{ secrets.DOCKER_USERNAME }}/Musicians-Paradise
+          run: docker build https://github.com/Apro2011/Collaboration-Project/tree/develop/backend --file Dockerfile --tag ${{ secrets.DOCKER_USERNAME }}/musicians-paradise
 
       # Push docker image to Dockerhub
         - name: Docker Push
-          run: docker push ${{ secrets.DOCKER_USERNAME }}/Musicians-Paradise
+          run: docker push ${{ secrets.DOCKER_USERNAME }}/musicians-paradise
