Add docker compose file

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -18,10 +18,10 @@ COPY package*.json /app
 RUN npm install
 
 # Copy the rest of our Next.js folder into /app
-COPY . /app
+COPY ./src /app
 
 # Ensure port 3000 is accessible to our system
 EXPOSE 3000
 
 # Run npm dev, as we would via the command line 
-CMD ["npm", "dev"]
+CMD ["npm", "run", "dev"]
