--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -2,7 +2,7 @@ name: Publish Docker Image to Docker Hub
 
 on:
   push:
-    branches: ['develop']
+    branches: ['develop', 'feature/setup-backend']
 
 jobs:
   build:
