--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,7 @@ cachetools==4.2.4
 certifi==2022.9.24
 charset-normalizer==2.1.1
 Django==4.1.3
+django-cors-headers==3.13.0
 django-graphql-jwt==0.3.4
 graphene==3.2.1
 graphene-django==3.0.0
