--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,6 +6,8 @@ charset-normalizer==2.1.1
 Django==4.1.3
 django-cors-headers==3.13.0
 django-graphql-jwt==0.3.4
+djongo==1.3.6
+dnspython==2.3.0
 graphene==3.2.1
 graphene-django==3.0.0
 graphql-core==3.2.3
@@ -18,12 +20,14 @@ protobuf==4.21.9
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 PyJWT==2.6.0
+pymongo==3.12.3
 pyparsing==3.0.9
 python-dateutil==2.8.2
+pytz==2022.7.1
 requests==2.28.1
 rsa==4.9
 six==1.16.0
-sqlparse==0.4.3
+sqlparse==0.2.4
 text-unidecode==1.3
 tzdata==2022.6
 uritemplate==4.1.1
