--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.6",
-    "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "formik": "^2.2.9",
     "graphql": "^16.6.0",
@@ -18,5 +17,18 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "yup": "^0.32.11"
+  },
+  "devDependencies": {
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-node": "^4.1.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "prettier": "^2.8.4"
   }
 }
