--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
     restart: always
     volumes:
       - ./frontend:/app
-      - ./frontend/node_modules:/app/node_modules
+      # - ./frontend/node_modules:/app/node_modules
       - /app/.next
     ports:
       - 3000:3000
