--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-# docker-compose.yml
-
 version: "3"
 
 services:
@@ -10,8 +8,8 @@ services:
     container_name: design-system
     restart: always
     volumes:
-      - ./design-system:/app
-      - ./design-system/node_modules:/app/node_modules
+      - ./design-system/stories/:/app/stories
+      - ./design-system/.storybook/:/app/.storybook
     ports:
       - 6006:6006
 
@@ -23,7 +21,6 @@ services:
     restart: always
     volumes:
       - ./frontend:/app
-      # - ./frontend/node_modules:/app/node_modules
       - /app/.next
     ports:
       - 3000:3000
