--- a/design-system/package.json
+++ b/design-system/package.json
@@ -29,7 +29,8 @@
     "@storybook/manager-webpack5": "^6.5.16",
     "@storybook/react": "^6.5.16",
     "@storybook/testing-library": "^0.0.13",
-    "babel-loader": "^8.3.0"
+    "babel-loader": "^8.3.0",
+    "storybook-css-modules": "^1.0.8"
   },
   "dependencies": {
     "react": "^18.2.0",
