Create Storybook component structure and add example button component

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     container_name: design-system
     restart: always
     volumes:
+      - ./design-system/components/:/app/components
       - ./design-system/stories/:/app/stories
       - ./design-system/.storybook/:/app/.storybook
     ports:
