--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,11 +1,7 @@
 music_env
 .idea
 db.sqlite3
-guitar_blog/__pycache__
-guitar_blog/migrations
-mysite/__pycache__
+migrations
+__pycache__
 media
-users/__pycache__
-users/migrations
-graphene_file_upload/__pycache__
-graphene_file_upload/django/__pycache__
+.vscode
